Refactor circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ executors:
               -vendor/bundle
 jobs:
   lintering:
-    executor: : default
+    executor: default
       steps:
         -defaults
 
