--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,29 @@
 version: 2.1
 
-executors:
-  default:
-    working_directory: ~/repo
-    description: Codebreaker gem project
-    docker:
-      -image: circleci/ruby:2.5.1
-      environment:
-        RAILS_ENV: test
-
-  caches:
-    - &bundle_cache_full v2-repo-{{ checksum "Gemfile.lock" }}
-    - &bundle_cache v2-repo
-
-  commands:
-    defaults:
-      steps:
-        - checkout
-        - restore_cache:
-            keys:
-              - *bundle_cache_full
-              - *bundle_cache
-        - run: bundle install --path vendor/bundle
-        - save_cache:
-            key: *bundle_cache_full
-            paths:
-              -vendor/bundle
+# Define the jobs we want to run for this project
 jobs:
-  lintering:
-    executor: default
+  build:
+    docker:
+      - image: cimg/<language>:<version TAG>
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+    steps:
+      - checkout
+      - run: echo "this is the build job"
+  test:
+    docker:
+      - image: cimg/<language>:<version TAG>
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+    steps:
+      - checkout
+      - run: echo "this is the test job"
 
-  workflows:
-    version: 2.1
-    build:
-      jobs:
-        - lintering
+# Orchestrate our job run sequence
+workflows:
+  build_and_test:
+    jobs:
+      - build
+      - test
