--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,39 @@
 version: 2.1
 
-# Define the jobs we want to run for this project
-jobs:
-  build:
+executors:
+  default:
+    working_directory: ~/repo
+    description: Codebreaker gem project
     docker:
-      - image: cimg/ruby:3.1.2
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
-    steps:
-      - checkout
-      - run: echo "this is the build job"
-  test:
-    docker:
-      - image: cimg/ruby:3.1.2
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
-    steps:
-      - checkout
-      - run: echo "this is the test job"
+      -image: circleci/ruby:3.1.2
+      environment:
+        RAILS_ENV: test
 
-# Orchestrate our job run sequence
-workflows:
-  build_and_test:
-    jobs:
-      - build
-      - test
+  caches:
+    - &bundle_cache_full v2-repo-{{ checksum "Gemfile.lock" }}
+    - &bundle_cache v2-repo
+
+  commands:
+    defaults:
+      steps:
+        - checkout
+        - restore_cache:
+            keys:
+              - *bundle_cache_full
+              - *bundle_cache
+        - run: bundle install --path vendor/bundle
+        - save_cache:
+            key: *bundle_cache_full
+            paths:
+              -vendor/bundle
+jobs:
+  lintering:
+    executor: default
+      steps:
+        -defaults
+
+  workflows:
+    version: 2.1
+    build:
+      jobs:
+        - lintering
