--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,15 +17,7 @@ executors:
     defaults:
       steps:
         - checkout
-        - restore_cache:
-            keys:
-              - *bundle_cache_full
-              - *bundle_cache
-        - run: bundle install --path vendor/bundle
-        - save_cache:
-            key: *bundle_cache_full
-            paths:
-              -vendor/bundle
+        - run: bundle install
 jobs:
   lintering:
     executor: default
