--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ executors:
   default:
     working_directory: ~/repo
     docker:
-      -image: circleci/ruby:3.1.2
+      -image: cimg/ruby:3.1.2
       environment:
         RAILS_ENV: test
 
