Update circleci config because rspec requires linters

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,4 +52,6 @@ workflows:
   build:
     jobs:
       - lintering
-      - run_specs
+      - run_specs:
+          requires:
+            - lintering
