Fix circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 executors:
   default:
-    working_directory: `/repo
+    working_directory: ~/repo
     description: The official Docker image
     docker:
       - image: cimg/ruby.3.1.2
